[FIX] Misaligned upload progress bar "cancel" button (#13407)

--- a/packages/rocketchat_theme/client/imports/general/base_old.css
+++ b/packages/rocketchat_theme/client/imports/general/base_old.css
@@ -2217,11 +2217,13 @@ rc-old select,
 			}
 		}
 
-		& button {
+		& .upload-progress-close {
 			position: relative;
 			z-index: 3;
 
 			float: right;
+
+			height: 100%;
 
 			text-transform: uppercase;
 
